# ribosome_concentration

./: README.md  pyproject.toml  requirements.txt
src/ribosome_concentration/: main.py
src/ribosome_concentration/EM/: benchmarking.py  compartment_based.py  expectation_maximization.py
src/ribosome_concentration/input/: input.py
